salesforce/force-app/main/default/objects/TransferRequest__c/TransferRequest__c.object-meta.xml
<CustomObject>
    <label>Transfer Request</label>
    <pluralLabel>Transfer Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <nameField>
        <label>Transfer Request Name</label>
        <type>AutoNumber</type>
        <displayFormat>TR-{0000}</displayFormat>
    </nameField>
</CustomObject>