salesforce/force-app/main/default/objects/TransferRequest__c/fields/OTP__c.field-meta.xml
<CustomField>
    <fullName>OTP__c</fullName>
    <label>OTP</label>
    <type>Text</type>
    <length>10</length>
</CustomField>