salesforce/force-app/main/default/objects/TransferRequest__c/fields/OTP_Generated_At__c.field-meta.xml
<CustomField>
    <fullName>OTP_Generated_At__c</fullName>
    <label>OTP Generated At</label>
    <type>DateTime</type>

</CustomField>