salesforce/force-app/main/default/objects/TransferRequest__c/fields/Receiver_Amount__c.field-meta.xml
<CustomField>
    <fullName>Receiver_Amount__c</fullName>
    <label>Receiver Amount</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>